apps/default/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prowlarr
  name: prowlarr
  namespace: default
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 9696
  selector:
    app: prowlarr
  type: LoadBalancer
  loadBalancerIP: 192.168.1.164
