apps/default/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: bramble-ca-issuer
    traefik.ingress.kubernetes.io/router.middlewares: networking-https-redirect@kubernetescrd
spec:
  rules:
  - host: prowlarr.bramble.home
    http:
      paths:
      - backend:
          service:
            name: prowlarr
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
        - prowlarr.bramble.home
      secretName: prowlarr-tls
